# Outback-Stockbook

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/stockbook/: __init__.py  main.py
src/stockbook/models/: __init__.py  database.py  entities.py
src/stockbook/services/: pdf_reports.py
src/stockbook/ui/: __init__.py  main_window.py
src/stockbook/ui/dialogs/: __init__.py  animal_dialog.py  quick_actions.py
src/stockbook/ui/views/: __init__.py  animals.py  base.py  dashboard.py  mobs.py  paddocks.py  reports.py  settings.py  treatments.py  weights.py
tests/: __init__.py
